# demo-help-desk-hub-api

./: .dockerignore  .env.example  .gitignore  .mcp.json  CI-CD.md  CLAUDE.md  DOCKER.md  Dockerfile  EXPLANATION.md  OBSERVABILITY.md  README.TESTS.md  README.md  TESTING.md  TESTS_CREATED.md  TESTS_SUMMARY.md  docker-compose.yml  pyproject.toml  pytest.ini  setup_tests.bat  setup_tests.sh
.claude/: settings.json
.claude/agents/: migration-reviewer.md  security-reviewer.md
.claude/skills/create-migration/: SKILL.md
.claude/skills/new-endpoint/: SKILL.md
.github/workflows/: ci-cd.yml
migrations/: env.py
migrations/versions/: 05d6a98dc1c6_add_telephone_field_to_users.py  1542ad98c7c7_create_initial_schema_with_tickets_and_.py  59b2b3227eb5_create_users_table.py  69b887a5d772_add_assigned_to_field_to_tickets_with_.py
observability/: loki-config.yaml  otel-collector-config.yaml  prometheus.yml  tempo.yaml
observability/grafana/: datasources.yaml
scripts/: load-test.ps1
src/: main.py
src/api/routes/: auth_routes.py  categories_routes.py  system_routes.py  ticket_routes.py
src/application/: auth_service.py  ticket_service.py
src/domain/tickets/: enums.py  exceptions.py  models.py  repositories.py
src/infrastructure/: database.py  logging_config.py  observability.py
src/infrastructure/di/: auth_dependencies.py  dependencies.py
src/infrastructure/models/: ticket_orm.py  (+1 more)
tests/: __init__.py  conftest.py  test_api_routes.py  test_app_configuration.py  test_auth_service.py  test_domain.py  test_in_memory_repository.py  test_ticket_service.py
(+12 files in other folders)
