[project]
name = "demo-help-desk-hub-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "bcrypt>=5.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.136.1",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "secure>=2.0.1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]
